--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -42,6 +42,7 @@ button:hover {
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
+    font-weight: bold;
     color: #b7bdf8;
 }
 
